
    package: 'soiltexture'

CHANGES IN VERSION 1.2.19

    2014/09/25  Compiled for R 3.1.1
    
CHANGES IN VERSION 1.2.18
    
    2014/07/03  Added SVN_VERSION file and show SVN version when 
        the package is attached.

CHANGES IN VERSION 1.2.17
    
    2014/07/02  Fixed small bug in the vignette (prevented package
        compilation)

CHANGES IN VERSION 1.2.16
    
    2014/06/10  New attempt to fix special characters in languages
        and triangles

CHANGES IN VERSION 1.2.15

    2014/06/09  Added texture triangle from Lemos & Santos (1996) 
        (Brasilian triangle). Courtesy of Rodolfo Marcondes 
        Silva Souza, UFPE, Brasil. Code BRASIL.TT
                
        Now support Portuguese language (lang = "pt")
                
        Modified the way to handle languages and triangles 
        with special characters, but it seems R still 
        remove some of the characters
                
CHANGES IN VERSION 1.2.14

    2014/04/23  Added texture triangle from Whitney 1911 (USDA)
        (courtesy of Nic Jelinski, University of Minnesota, 
        USA)

CHANGES IN VERSION 1.2.13

    2014/01/10  A mistake has been corrected in the texture triangle 
        DE.SEA74.TT (Standortserkundungsanweisung SEA 1974 (DE)), 
        for classes "lehmiger Ton" (lT) and "schluffiger 
        Ton" (uT), where a missing vertex has been added.

CHANGES IN VERSION 1.2.12

    2014/01/09  The triangle named FAO50.TT was in fact erroneously 
        named, as it is the HYPRES / European Soil Map 
        texture triangle. The option class.sys = "FAO50.TT" 
        is now giving a warning, and the new option is 
        class.sys = "HYPRES.TT". See the vignette for 
        details.

CHANGES IN VERSION 1.2.11

    2014/01/08 Compiled under R 3.0.2
               
        The functions: TT.check.ps.lim.Xm() and 
        TT.text.transf.Xm() have been moved to the package 
        soiltexturetransformation, available on r-forge