@@ -17,12 +17,12 @@ ISSS triangle; Romanian triangle; Polish triangle.}
 \details{
 \tabular{ll}{Package: \tab soiltexture\cr
 Version: \tab 1.2.19\cr
-Date: \tab 2014-09-25\cr
+Date: \tab 2014-09-29\cr
 Title: \tab Functions for soil texture plot, classification and transformation\cr
 Author: \tab Julien MOEYS <jules_m78-soiltexture@yahoo.fr>, contributions from Wei Shangguan.\cr
 Maintainer: \tab Julien MOEYS <jules_m78-soiltexture@yahoo.fr>\cr
 Depends: \tab R (>= 3.1.1), sp, MASS\cr
-Suggests: \tab xtable, tools\cr
+Suggests: \tab xtable, tools, utils\cr
 License: \tab AGPL (>=3)\cr
 URL: \tab http://soiltexture.r-forge.r-project.org/\cr}
 }
